Fixing up the spacing on the slide in navbar

--- a/src/sass/_navbar.scss
+++ b/src/sass/_navbar.scss
@@ -29,14 +29,10 @@
   font-size: x-large;
 }
 .navbar-3 {
-  height: 29em;
+  height: 33em;
   position: inherit;
-  z-index: 1;
   background-color: $grey-light;
-  padding-top: 60px;
   transition: 0.5s;
-
-
 }
 
 .navbar--filler{
